theme + rest acf plugin

--- a/wp-content/themes/academe/assets/css/styles.css
+++ b/wp-content/themes/academe/assets/css/styles.css
@@ -2557,10 +2557,6 @@ span.highlighted {
     color: #828282;
     cursor: pointer;
 }
-.hidden {
+.author-teacher #search {
     display: none;
-}
-
-.shareLink {
-    cursor: pointer;
 }
