--- a/wp-content/themes/academe/assets/css/styles.css
+++ b/wp-content/themes/academe/assets/css/styles.css
@@ -1859,6 +1859,20 @@ h2.section-heading {
     font-size: 14px;
 }
 
+#guideInfo .action-buttons .orange-btn {
+    color: #FFFFFF;
+    background: #d44724;
+    padding: 10px;
+    border-radius: 3px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 35px;
+    cursor: pointer;
+    margin-right: 20px;
+    font-size: 14px;
+}
+
 #guideContent {
     padding: 0 40px;
     position: relative;
@@ -1868,7 +1882,7 @@ h2.section-heading {
     display: flex;
 }
 #guideContent .tabs-group .ui.menu .item {
-    font-size: 28px;
+    font-size: 14px;
     line-height: 34px;
     margin-right: 40px;
     padding: 10px 0;
